2006-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* target.make: fix typo (extra bracket in conditional).

2006-11-15  Nicola Pero <nicola.pero@meta-innovation.com>

	* Documentation/install.texi: Updated by removing section about
	-Wno-import.
	* INSTALL: Regenerated.
	
2006-11-15  Nicola Pero <nicola.pero@meta-innovation.com>

	* common.make (INSTALL_ROOT_DIR): If DESTDIR is set, then
	set INSTALL_ROOT_DIR from it.
	* spec-rules.template: Use DESTDIR instead of INSTALL_ROOT_DIR.
	* spec-debug-rules.template: Same change.
	
2006-10-29  Richard Frith-Macdonald <rfm@gnu.org>

	* common.make: Disable warnings about #import as it is now recommended
	rather then deprecated!
	* INSTALL: Remove obsolete commments about #import

2006-10-25  Richard Frith-Macdonald <rfm@gnu.org>

	* target.make: For Solaris replace -G with -shared in
	SHARED_LIB_LINK_CMD to fix bug on 64bit systems where library
	would contain 32bit dynamic library stubs for 'main' and other
	functions, causing runtime failure of all code linked with it.

2006-10-11  Nicola Pero <nicola.pero@meta-innovation.com>

	* Documentation/machines.texi (Debian/PowerPC): Fixed prev node
	link.

2006-10-11  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (install): Fixed installation of debugapp when
	building in a different directory.

2006-10-11  Nicola Pero <nicola.pero@meta-innovation.com>

	* Documentation/GNUmakefile (GNUSTEP_INSTALLATION_DOMAIN): Use 
	GNUSTEP_INSTALLATION_DOMAIN, not GNUSTEP_INSTALLATION_DIR.

2006-10-10  Nicola Pero <nicola.pero@meta-innovation.com>

	To install software in a certain GNUstep domain, the recommended
	way is now as in 'GNUSTEP_INSTALLATION_DOMAIN = SYSTEM'.

	* common.make: Implemented new GNUSTEP_INSTALLATION_DOMAIN
	variable.
	* Master/rules.make (internal-check-install-permissions): Removed
	help message that was suggesting to use GNUSTEP_INSTALLATION_DIR.
	
2006-10-07  Nicola Pero <nicola.pero@meta-innovation.com>
